fix: full screen desktop overflow issue

--- a/src/app/pages/game/game.component.css
+++ b/src/app/pages/game/game.component.css
@@ -1,10 +1,10 @@
 :host {
   --padding: 8px;
 
-  width: calc(100vw - 2 * var(--padding));
-  height: calc(100vh - 2 * var(--padding));
+  height: calc(100vh - (2 * var(--padding)));
   padding: var(--padding);
   display: block;
+  overflow-y: scroll;
 
   background:
     radial-gradient(#007100, 15%, transparent 16%) 0 0,
